# servier

./: README.md  main.py  pyproject.toml  query_main.py  tox.ini
data/: result.json
servier_data/cleaning/: cleaner.py
servier_data/enrichement/: drug_linker.py
servier_data/query/: query.py
servier_data/reader/: py_reader.py  py_writer.py
servier_data/session/: spark_session.py
servier_data/transformation/: transformations.py
tests/cleaner/: test_cleaner.py
tests/cleanning/: test_cleaner.py
tests/query/: test_query.py
tests/transformation/: test_transformations.py
