[tool.poetry]
name = "servier-data"
version = "0.1.0"
description = "link Drugs to scientific publication and clinic trails"
authors = ["jaouad.boughaba <jboughab@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: spark job"
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pyspark = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
tox = "^3.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
